--- a/demo/.vscode/settings.json
+++ b/demo/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "xmemory0": "cpp"
+        "xmemory0": "cpp",
+        "iosfwd": "cpp",
+        "xstring": "cpp",
+        "ostream": "cpp"
     }
 }
